<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Super Promo</string>
    <string name="share_check_out">Hey, download this app: </string>

    <string name="common_btn_ok">Ok</string>
    <string name="common_btn_add">Add</string>
    <string name="common_btn_save">Save</string>
    <string name="common_btn_cancel">Cancel</string>
    <string name="common_btn_delete">Delete</string>
    <string name="common_btn_edit">Edit</string>
    <string name="common_dialog_choose_title">Choose from the list</string>

    <string name="common_intent_text_error">There are no text client installed on your device.</string>
    <string name="common_intent_email_error">There are no email client installed on your device.</string>

    <string name="contact_us_feedback">App feedback</string>

    <string name="retry">Retry</string>
    <string name="no_connection">Connection error.</string>
    <string name="no_connection_sub_text">Tap to try again.</string>
    <string name="server_problem">Server not responding</string>
    <string name="server_problem_sub_text">We will fix it as soon as possible</string>
    <string name="no_product">No products found.</string>
    <string name="no_product_sub_text">Tap to try again.</string>
    <string name="no_shop">No shops found.</string>
    <string name="no_shop_sub_text">Tap to try again.</string>
    <string name="no_suggestion">No suggestions.</string>
    <string name="no_suggestion_sub_text" />

    <string name="main_compare">Compare</string>
    <string name="main_offer">Offer</string>
    <string name="main_shopping">Shopping list</string>

    <string name="menu_shopping">Shopping list</string>
    <string name="menu_cards">Loyalty cards</string>
    <string name="menu_favorite">Favorite</string>
    <string name="menu_share">Share</string>
    <string name="menu_contact">Contact us</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_info">About app</string>

    <string name="detail_shopName">Shop</string>
    <string name="detail_productName">Product</string>
    <string name="detail_productSubName">Product info</string>
    <string name="detail_price">Price</string>
    <string name="detail_amount">Amount</string>
    <string name="detail_details">Details</string>
    <string name="detail_promo">Promo</string>
    <string name="detail_promoInfo">Promo info</string>
    <string name="detail_url">Url</string>

    <string name="card_barcode_dialog_color_title">Select a card\'s color</string>
    <string name="card_barcode_dialog_name_title">Enter a card\'s name</string>
    <string name="card_barcode_dialog_number_title">Enter a card\'s number</string>
    <string name="card_barcode_title">Scan a card\'s barcode</string>
    <string name="card_barcode_enter_manually">Enter manually</string>
    <string name="card_barcode_enter_manually_info">If the reader does not recognize the code. \nAsk the seller to enter the code manually.</string>
    <string name="card_empty_list">List is empty.</string>
    <string name="card_empty_sub_text">Add a loyalty card.</string>

    <string name="shopping_list_archive">Archive</string>
    <string name="shopping_list_unarchive">Unarchive</string>
    <string name="shopping_list_active">Active</string>
    <string name="shopping_list_moved_to_active">Moved to the active</string>
    <string name="shopping_list_moved_to_archive">Moved to the archive</string>
    <string name="shopping_list_delete">Do you want to delete your shopping list?</string>
    <string name="shopping_list_deleted">The shopping list deleted</string>
    <string name="shopping_list_dialog_name_title">Enter a name for the shopping list</string>
    <string name="shopping_list_empty_list">No shopping list.</string>
    <string name="shopping_list_empty_sub_text">Add a shopping list.</string>
    <string name="shopping_list_archive_empty_list">The archive is empty.</string>
    <string name="shopping_list_archive_empty_sub_text">Add shopping list to archive.</string>
    <string name="shopping_dialog_choose_title">Select a shopping list</string>
    <string name="product_dialog_name_title">Enter a product name</string>
    <string name="product_empty_list">List is empty.</string>
    <string name="product_empty_sub_text">Add a product.</string>

    <string name="defaultQueryHint">Search for a product e.g. „milk”</string>

</resources>