<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_baseline_edit_24"
        android:orderInCategory="100"
        android:title="@string/common_btn_edit"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_unarchive"
        android:icon="@drawable/ic_baseline_unarchive_24"
        android:orderInCategory="100"
        android:title="@string/shopping_list_unarchive"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_baseline_delete_forever_24"
        android:orderInCategory="100"
        android:title="@string/common_btn_delete"
        app:showAsAction="never" />
</menu>